--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1"
-        />
-        <script
-            src="./src/index.jsx"
-            type="module"
-        ></script>
-        <script>
-            const global = globalThis
-        </script>
-    </head>
-    <body>
-        <div id="app"></div>
-    </body>
+
+<head>
+    <title></title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/tailwind.css" />
+    <script src="./src/index.jsx" type="module"></script>
+    <script>
+        const global = globalThis
+    </script>
+</head>
+
+<body>
+    <div id="app"></div>
+</body>
+
 </html>
